# backoffice-api

./: .dockerignore  .env.exemplo  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: pipeline.yml
attributes/: admin.py  api.py  models.py  schemas.py
attributes/migrations/: 0001_initial.py
authentication/: api.py  auth.py  schema.py
category/: admin.py  api.py  models.py  schemas.py
category/migrations/: 0001_initial.py
core/: api.py  settings.py  urls.py
product_type/: admin.py  api.py  models.py  schemas.py
product_type/migrations/: 0001_initial.py
tests/: conftest.py  test_attributes.py  test_category.py  test_products.py
