[project]
name = "backoffice-api"
version = "0.1.0"
description = ""
authors = [
    {name = "rodrigo8064",email = "rodrigooliveiradel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django-ninja (>=1.6.2,<2.0.0)",
    "django-mptt (>=0.18.0,<0.19.0)",
    "python-decouple (>=3.8,<4.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-env (>=1.6.0,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)"
]

[tool.ruff]
line-length = 79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".gitignore",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
    "manage.py",
    "settings.py"
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR2004', 'PLR0917', 'PLR0913']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
env = [
    "DJANGO_ENV=test",
    "SECRET_KEY=uma-chave-qualquer-para-teste_grande",
    "DEBUG=True",
    "ALLOWED_HOSTS=localhost,127.0.0.1",
    "JWT_ALGORITHM=HS256",
    "JWT_EXPIRATION_MINUTES=30",
]
pythonpath = "."
django_find_project = true
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["."]
omit = ["*tests*", "*migrations*", "*manage.py*", "*asgi.py*", "*wsgi.py*"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python manage.py runserver 0.0.0.0:8001'
pre_test = 'task lint'
test = 'pytest -s -x --cov=backoffice_api -vv'
post_test = 'coverage html'
